--- a/bond.html
+++ b/bond.html
@@ -60,15 +60,15 @@
             <div id="bondCalculatorFields">
                 <h4 class="mt-4">Bond Calculator</h4>
                 <div class="form-floating mb-3">
-                    <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)" required>
+                    <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)" >
                     <label for="bondAmount">Amount (TZS)</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="number" step="0.01" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" required>
+                    <input type="number" step="0.01" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" >
                     <label for="bondInterestRate">Interest Rate (%)</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="number" step="1" class="form-control" id="bondYears" placeholder="Duration (Years)" required>
+                    <input type="number" step="1" class="form-control" id="bondYears" placeholder="Duration (Years)" >
                     <label for="bondYears">Duration (Years)</label>
                 </div>
                 <div class="form-floating mb-3">
