--- a/bond.html
+++ b/bond.html
@@ -60,7 +60,7 @@
             <div id="bondCalculatorFields">
                 <h4 class="mt-4">Bond Calculator</h4>
                 <div class="form-floating mb-3">
-                    <input type="number" step="0.01" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
+                    <input type="text" class="form-control" id="bondAmount" placeholder="Amount (TZS)" oninput="formatNumber(this)">
                     <label for="bondAmount">Amount (TZS)</label>
                 </div>
                 <div class="form-floating mb-3">
@@ -85,7 +85,7 @@
             <div id="loanCalculatorFields" style="display: none;">
                 <h4 class="mt-4">Loan Calculator</h4>
                 <div class="form-floating mb-3">
-                    <input type="number" step="0.01" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Amount (TZS)" oninput="formatNumber(this)">
                     <label for="loanAmount">Amount (TZS)</label>
                 </div>
                 <div class="form-floating mb-3">
@@ -100,7 +100,7 @@
 
             <!-- Buttons -->
             <div class="button-group mt-4">
-                <button type="submit" class="btn btn-dark w-100">Calculate</button>
+                <button type="submit" class="btn btn-dark w-100" id="calculateBtn">Calculate</button>
                 <button type="button" class="btn btn-outline-secondary w-100 mt-3" id="clearFormBtn">Clear</button>
             </div>
         </form>
@@ -133,6 +133,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
-
 </body>
 </html>
