--- a/bond.html
+++ b/bond.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
+    <title>Bond and Loan Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,6 @@
             </ul>
         </div>
     </nav>
-
 
     <!-- Calculator Form -->
     <div class="container calculator-container mt-5 mb-5">
@@ -109,7 +108,7 @@
 
     <!-- Footer -->
     <footer class="text-center mt-5">
-        <p>Bond Calculator &copy; 2024 Safe Bank Plc.</p>
+        <p>Bond and Loan Calculator &copy; 2024 Safe Bank Plc.</p>
     </footer>
 
     <!-- Modal for displaying results -->
