--- a/bond.html
+++ b/bond.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond and Loan Calculator</title>
+    <title>Bond Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
         <div class="container-fluid d-flex align-items-center">
             <a class="navbar-brand me-auto" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+                <img src="img/logo.png" alt="Logo">
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -108,7 +108,7 @@
 
     <!-- Footer -->
     <footer class="text-center mt-5">
-        <p>Bond and Loan Calculator &copy; 2024 Safe Bank Plc.</p>
+        <p>Bond Calculator &copy; 2024 Safe Bank Plc.</p>
     </footer>
 
     <!-- Modal for displaying results -->
