--- a/bond.html
+++ b/bond.html
@@ -13,13 +13,13 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
-        <div class="container-fluid d-flex align-items-center">
-            <a class="navbar-brand me-auto" href="#">
-                <img src="img/logo.png" alt="Logo">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
+        <div class="container-fluid d-flex justify-content-between align-items-center">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
