--- a/bond.html
+++ b/bond.html
@@ -71,7 +71,7 @@
                     <input type="number" class="form-control" id="bondYears" placeholder="Duration (Years)">
                     <label for="bondYears">Duration (Years)</label>
                 </div>
-                <div class="form-floating mb-3">
+                <div class="form-group mb-3">
                     <select class="form-select" id="bondFrequency" aria-label="Bond Interest Frequency">
                         <option value="monthly">Monthly</option>
                         <option value="quarterly">Quarterly</option>
