--- a/camera.html
+++ b/camera.html
@@ -17,13 +17,15 @@
       justify-content: center;
       align-items: center;
       position: relative;
+      overflow: hidden; /* Ensure video does not overflow */
     }
-    
+
     .camera-square {
       width: 300px;
       height: 220px;
       border: 2px dashed #007bff;
       position: absolute;
+      pointer-events: none; /* Allow clicks through the square */
     }
 
     video {
@@ -36,34 +38,62 @@
   <div class="container text-center mt-5">
     <h1>ID Scanner</h1>
     <div class="camera-container">
-      <video id="video" autoplay></video>
+      <video id="video" autoplay playsinline></video>
       <div class="camera-square"></div>
     </div>
     <button class="btn btn-primary" id="capture">Capture ID</button>
+    <button class="btn btn-secondary" id="flashToggle">Toggle Flash</button>
   </div>
 
   <!-- Bootstrap JS and dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Access the camera
     const video = document.getElementById('video');
+    let stream;
 
     // Ask for camera access
-    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
-        .then(function(stream) {
-          video.srcObject = stream;
-        })
-        .catch(function(error) {
-          console.error("Error accessing the camera: ", error);
+    async function startCamera() {
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' } // Use back camera
         });
+        video.srcObject = stream;
+      } catch (error) {
+        console.error("Error accessing the camera: ", error);
+      }
     }
 
-    // Capture button handler
+    // Flash toggle function
+    const flashToggle = document.getElementById('flashToggle');
+    let isFlashOn = false;
+
+    async function toggleFlash() {
+      if (!stream) return;
+
+      const track = stream.getVideoTracks()[0];
+      const capabilities = track.getCapabilities();
+
+      if (capabilities.torch) {
+        isFlashOn = !isFlashOn;
+        await track.applyConstraints({
+          advanced: [{ torch: isFlashOn }]
+        });
+        flashToggle.textContent = isFlashOn ? 'Flash Off' : 'Flash On';
+      } else {
+        alert("Flash is not supported on this device.");
+      }
+    }
+
+    // Event listeners
     document.getElementById('capture').addEventListener('click', function() {
       alert("ID captured!");
       // Additional functionality can be added here to process the captured image.
     });
+
+    flashToggle.addEventListener('click', toggleFlash);
+    
+    // Start the camera
+    startCamera();
   </script>
 </body>
 </html>
