--- a/camera.html
+++ b/camera.html
@@ -1,97 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ID Scanner</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* CSS for camera layout */
-    .camera-container {
-      width: 320px;
-      height: 240px;
-      border: 2px solid #333;
-      margin: 20px auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      overflow: hidden; /* Ensure video does not overflow */
-    }
-
-    .camera-square {
-      width: 300px;
-      height: 220px;
-      border: 2px dashed #007bff;
-      position: absolute;
-      pointer-events: none; /* Allow clicks through the square */
-    }
-
-    video {
-      width: 100%;
-      height: auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multi-Step Account Opening Form</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .hidden {
+            display: none;
+        }
+        .step {
+            display: none;
+        }
+        .step.active {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <div class="container text-center mt-5">
-    <h1>ID Scanner</h1>
-    <div class="camera-container">
-      <video id="video" autoplay playsinline></video>
-      <div class="camera-square"></div>
+    <div class="container mt-5">
+        <h1 class="text-center">Account Opening Form</h1>
+        
+        <div id="step-1" class="step active">
+            <h2>Step 1: Choose Account Opening Method</h2>
+            <select id="accountMethod" class="form-select" onchange="handleAccountMethodChange()">
+                <option value="" disabled selected>Select method</option>
+                <option value="self">Self</option>
+                <option value="assisted">Assisted by RM</option>
+            </select>
+        </div>
+
+        <div id="step-2" class="step">
+            <h2>Step 2: Enter Phone Number</h2>
+            <div id="selfInput" class="hidden">
+                <label for="phoneSelf" class="form-label">Phone Number:</label>
+                <input type="tel" class="form-control" id="phoneSelf" required>
+            </div>
+            <div id="assistedInput" class="hidden">
+                <label for="assistanceCode" class="form-label">Assistance One-Time Code:</label>
+                <input type="text" class="form-control" id="assistanceCode" required>
+                <label for="phoneAssisted" class="form-label">Phone Number:</label>
+                <input type="tel" class="form-control" id="phoneAssisted" required>
+            </div>
+            <button class="btn btn-primary mt-3" onclick="nextStep(2)">Next</button>
+        </div>
+
+        <div id="step-3" class="step">
+            <h2>Step 3: Enter OTP</h2>
+            <label for="otp" class="form-label">OTP:</label>
+            <input type="text" class="form-control" id="otp" required>
+            <button class="btn btn-primary mt-3" onclick="nextStep(3)">Next</button>
+        </div>
+
+        <div id="step-4" class="step">
+            <h2>Step 4: Enter ID Number</h2>
+            <label for="idNumber" class="form-label">ID Number:</label>
+            <input type="text" class="form-control" id="idNumber" required>
+            <label for="verificationType" class="form-label">Choose Type of Verification:</label>
+            <select id="verificationType" class="form-select" required>
+                <option value="" disabled selected>Select verification type</option>
+                <option value="security">Security Questions</option>
+                <option value="biometric">Biometric Scanning</option>
+            </select>
+            <button class="btn btn-primary mt-3" onclick="nextStep(4)">Next</button>
+        </div>
+
+        <div id="step-5" class="step">
+            <h2>Step 5: Verify Information</h2>
+            <p>Please review your information before proceeding.</p>
+            <button class="btn btn-primary mt-3" onclick="nextStep(5)">Next</button>
+        </div>
+
+        <div id="step-6" class="step">
+            <h2>Step 6: Capture ID</h2>
+            <p>Upload a clear image of your ID.</p>
+            <input type="file" class="form-control" accept="image/*" required>
+            <button class="btn btn-primary mt-3" onclick="nextStep(6)">Next</button>
+        </div>
+
+        <div id="step-7" class="step">
+            <h2>Step 7: Choose Account Type</h2>
+            <label for="accountType" class="form-label">Select Type of Account:</label>
+            <select id="accountType" class="form-select" required>
+                <option value="" disabled selected>Select account type</option>
+                <option value="savings">Savings Account</option>
+                <option value="checking">Checking Account</option>
+                <option value="business">Business Account</option>
+            </select>
+            <button class="btn btn-primary mt-3" onclick="nextStep(7)">Next</button>
+        </div>
+
+        <div id="step-8" class="step">
+            <h2>Step 8: Complete Address and Next of Kin Information</h2>
+            <label for="address" class="form-label">Address:</label>
+            <input type="text" class="form-control" id="address" required>
+            <label for="nextOfKin" class="form-label">Next of Kin:</label>
+            <input type="text" class="form-control" id="nextOfKin" required>
+            <button class="btn btn-primary mt-3" onclick="nextStep(8)">Next</button>
+        </div>
+
+        <div id="step-9" class="step">
+            <h2>Step 9: Agree to Terms and Conditions</h2>
+            <input type="checkbox" id="terms" required>
+            <label for="terms">I agree to the terms and conditions</label>
+            <button class="btn btn-primary mt-3" onclick="submitForm()">Submit</button>
+        </div>
+
+        <div id="successMessage" class="hidden text-center mt-4">
+            <h2>Success!</h2>
+            <p>Congratulations! Your information is under review. You will receive a confirmation via message or email about your account number.</p>
+        </div>
     </div>
-    <button class="btn btn-primary" id="capture">Capture ID</button>
-    <button class="btn btn-secondary" id="flashToggle">Toggle Flash</button>
-  </div>
 
-  <!-- Bootstrap JS and dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const video = document.getElementById('video');
-    let stream;
-    let isFlashOn = false;
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function handleAccountMethodChange() {
+            const method = document.getElementById('accountMethod').value;
+            document.getElementById('selfInput').classList.toggle('hidden', method !== 'self');
+            document.getElementById('assistedInput').classList.toggle('hidden', method !== 'assisted');
+        }
 
-    // Ask for camera access
-    async function startCamera() {
-      try {
-        stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: 'environment' } // Use back camera
-        });
-        video.srcObject = stream;
-      } catch (error) {
-        console.error("Error accessing the camera: ", error);
-      }
-    }
+        function nextStep(currentStep) {
+            // Hide current step
+            document.getElementById(`step-${currentStep}`).classList.remove('active');
+            // Show next step
+            document.getElementById(`step-${currentStep + 1}`).classList.add('active');
+        }
 
-    // Flash toggle function
-    async function toggleFlash(turnOn) {
-      if (!stream) return;
-
-      const track = stream.getVideoTracks()[0];
-      const capabilities = track.getCapabilities();
-
-      if (capabilities.torch) {
-        await track.applyConstraints({
-          advanced: [{ torch: turnOn }]
-        });
-        isFlashOn = turnOn;
-        document.getElementById('flashToggle').textContent = isFlashOn ? 'Flash Off' : 'Flash On';
-      } else {
-        alert("Flash is not supported on this device.");
-      }
-    }
-
-    // Capture button handler
-    document.getElementById('capture').addEventListener('click', async function() {
-      await toggleFlash(true); // Turn on the flash
-      alert("ID captured! Flash is on.");
-      // Add your capturing logic here, like taking a snapshot or processing the image.
-      setTimeout(() => toggleFlash(false), 1000); // Turn off flash after 1 second
-    });
-
-    // Start the camera
-    startCamera();
-  </script>
+        function submitForm() {
+            // Hide all steps
+            for (let i = 1; i <= 9; i++) {
+                document.getElementById(`step-${i}`).classList.remove('active');
+            }
+            // Show success message
+            document.getElementById('successMessage').classList.remove('hidden');
+        }
+    </script>
 </body>
 </html>
