--- a/camera.html
+++ b/camera.html
@@ -16,6 +16,28 @@
         .step.active {
             display: block;
         }
+        .camera-container {
+            width: 320px;
+            height: 240px;
+            border: 2px solid #333;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .camera-square {
+            width: 300px;
+            height: 220px;
+            border: 2px dashed #007bff;
+            position: absolute;
+            pointer-events: none;
+        }
+        video {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -74,8 +96,14 @@
 
         <div id="step-6" class="step">
             <h2>Step 6: Capture ID</h2>
-            <p>Upload a clear image of your ID.</p>
-            <input type="file" class="form-control" accept="image/*" required>
+            <p>Use the camera to capture your ID.</p>
+            <div class="camera-container">
+                <video id="video" autoplay playsinline></video>
+                <div class="camera-square"></div>
+            </div>
+            <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
+            <button class="btn btn-secondary" id="flashToggle">Toggle Flash</button>
+            <div id="captureMessage" class="mt-3 hidden"></div>
             <button class="btn btn-primary mt-3" onclick="nextStep(6)">Next</button>
         </div>
 
@@ -116,6 +144,47 @@
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        let stream;
+        let isFlashOn = false;
+        const video = document.getElementById('video');
+
+        // Camera and flash functionality
+        async function startCamera() {
+            try {
+                stream = await navigator.mediaDevices.getUserMedia({
+                    video: { facingMode: 'environment' } // Use back camera
+                });
+                video.srcObject = stream;
+            } catch (error) {
+                console.error("Error accessing the camera: ", error);
+            }
+        }
+
+        async function toggleFlash(turnOn) {
+            if (!stream) return;
+
+            const track = stream.getVideoTracks()[0];
+            const capabilities = track.getCapabilities();
+
+            if (capabilities.torch) {
+                await track.applyConstraints({
+                    advanced: [{ torch: turnOn }]
+                });
+                isFlashOn = turnOn;
+                document.getElementById('flashToggle').textContent = isFlashOn ? 'Flash Off' : 'Flash On';
+            } else {
+                alert("Flash is not supported on this device.");
+            }
+        }
+
+        document.getElementById('capture').addEventListener('click', async function() {
+            await toggleFlash(true); // Turn on the flash
+            document.getElementById('captureMessage').textContent = "ID captured!";
+            setTimeout(() => {
+                toggleFlash(false); // Turn off flash after 1 second
+            }, 1000);
+        });
+
         function handleAccountMethodChange() {
             const method = document.getElementById('accountMethod').value;
             document.getElementById('selfInput').classList.toggle('hidden', method !== 'self');
@@ -137,6 +206,9 @@
             // Show success message
             document.getElementById('successMessage').classList.remove('hidden');
         }
+
+        // Start the camera when the page loads
+        window.onload = startCamera;
     </script>
 </body>
 </html>
