--- a/camera.html
+++ b/camera.html
@@ -1,214 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Step Account Opening Form</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .hidden {
-            display: none;
-        }
-        .step {
-            display: none;
-        }
-        .step.active {
-            display: block;
-        }
-        .camera-container {
-            width: 320px;
-            height: 240px;
-            border: 2px solid #333;
-            margin: 20px auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            overflow: hidden;
-        }
-        .camera-square {
-            width: 300px;
-            height: 220px;
-            border: 2px dashed #007bff;
-            position: absolute;
-            pointer-events: none;
-        }
-        video {
-            width: 100%;
-            height: auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Account Opening Form</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .step {
+      display: none;
+    }
+
+    .step.active {
+      display: block;
+    }
+
+    .camera-container {
+      width: 320px;
+      height: 240px;
+      border: 2px solid #333;
+      margin: 20px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .camera-square {
+      width: 300px;
+      height: 220px;
+      border: 2px dashed #007bff;
+      position: absolute;
+      pointer-events: none;
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Account Opening Form</h1>
-        
-        <div id="step-1" class="step active">
-            <h2>Step 1: Choose Account Opening Method</h2>
-            <select id="accountMethod" class="form-select" onchange="handleAccountMethodChange()">
-                <option value="" disabled selected>Select method</option>
-                <option value="self">Self</option>
-                <option value="assisted">Assisted by RM</option>
-            </select>
+  <div class="container text-center mt-5">
+    <h1>Account Opening Form</h1>
+    <div id="formContainer">
+      <div class="step active" id="step1">
+        <h3>Select Account Opening Method</h3>
+        <select id="accountMethod" class="form-select" onchange="showAccountFields()">
+          <option value="">Choose...</option>
+          <option value="self">Self</option>
+          <option value="rm">Assisted by RM</option>
+        </select>
+        <div id="selfFields" class="mt-3" style="display:none;">
+          <label for="phoneSelf">Phone Number:</label>
+          <input type="tel" id="phoneSelf" class="form-control">
         </div>
+        <div id="rmFields" class="mt-3" style="display:none;">
+          <label for="oneTimeCode">Assistance One-Time Code:</label>
+          <input type="text" id="oneTimeCode" class="form-control">
+          <label for="phoneRM">Phone Number:</label>
+          <input type="tel" id="phoneRM" class="form-control">
+        </div>
+        <button class="btn btn-primary mt-3" onclick="nextStep(1)">Next</button>
+      </div>
 
-        <div id="step-2" class="step">
-            <h2>Step 2: Enter Details</h2>
-            <div id="selfInput" class="hidden">
-                <label for="phoneSelf" class="form-label">Phone Number:</label>
-                <input type="tel" class="form-control" id="phoneSelf" required>
-            </div>
-            <div id="assistedInput" class="hidden">
-                <label for="assistanceCode" class="form-label">Assistance One-Time Code:</label>
-                <input type="text" class="form-control" id="assistanceCode" required>
-                <label for="phoneAssisted" class="form-label">Phone Number:</label>
-                <input type="tel" class="form-control" id="phoneAssisted" required>
-            </div>
-            <button class="btn btn-primary mt-3" onclick="nextStep(2)">Next</button>
-        </div>
+      <div class="step" id="step2">
+        <h3>Enter OTP</h3>
+        <input type="text" id="otp" class="form-control" placeholder="Enter OTP">
+        <button class="btn btn-primary mt-3" onclick="nextStep(2)">Next</button>
+      </div>
 
-        <div id="step-3" class="step">
-            <h2>Step 3: Enter OTP</h2>
-            <label for="otp" class="form-label">OTP:</label>
-            <input type="text" class="form-control" id="otp" required>
-            <button class="btn btn-primary mt-3" onclick="nextStep(3)">Next</button>
+      <div class="step" id="step3">
+        <h3>Enter ID Number</h3>
+        <input type="text" id="idNumber" class="form-control" placeholder="Enter ID Number">
+        <select id="verificationMethod" class="form-select mt-3" onchange="showVerificationFields()">
+          <option value="">Choose Verification Method...</option>
+          <option value="security">Security Questions</option>
+          <option value="biometric">Biometric Scanning</option>
+        </select>
+        <div id="securityFields" class="mt-3" style="display:none;">
+          <label for="securityQuestion">Security Question:</label>
+          <input type="text" id="securityQuestion" class="form-control" placeholder="Your favorite color?">
         </div>
+        <div id="biometricFields" class="mt-3" style="display:none;">
+          <p>Biometric scanning functionality will be added here.</p>
+        </div>
+        <button class="btn btn-primary mt-3" onclick="nextStep(3)">Next</button>
+      </div>
 
-        <div id="step-4" class="step">
-            <h2>Step 4: Enter ID Number</h2>
-            <label for="idNumber" class="form-label">ID Number:</label>
-            <input type="text" class="form-control" id="idNumber" required>
-            <label for="verificationType" class="form-label">Choose Type of Verification:</label>
-            <select id="verificationType" class="form-select" required>
-                <option value="" disabled selected>Select verification type</option>
-                <option value="security">Security Questions</option>
-                <option value="biometric">Biometric Scanning</option>
-            </select>
-            <button class="btn btn-primary mt-3" onclick="nextStep(4)">Next</button>
-        </div>
+      <div class="step" id="step4">
+        <h3>Verify Your Information</h3>
+        <p>Please verify your full information before proceeding.</p>
+        <button class="btn btn-primary mt-3" onclick="nextStep(4)">Next</button>
+      </div>
 
-        <div id="step-5" class="step">
-            <h2>Step 5: Verify Information</h2>
-            <p>Please review your information before proceeding.</p>
-            <button class="btn btn-primary mt-3" onclick="nextStep(5)">Next</button>
+      <div class="step" id="step5">
+        <h3>Capture ID</h3>
+        <div class="camera-container">
+          <video id="video" autoplay playsinline></video>
+          <div class="camera-square"></div>
         </div>
+        <button class="btn btn-primary" id="capture">Capture ID</button>
+        <button class="btn btn-primary mt-3" onclick="nextStep(5)">Next</button>
+      </div>
 
-        <div id="step-6" class="step">
-            <h2>Step 6: Capture ID</h2>
-            <p>Use the camera to capture your ID.</p>
-            <div class="camera-container">
-                <video id="video" autoplay playsinline></video>
-                <div class="camera-square"></div>
-            </div>
-            <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
-            <button class="btn btn-secondary" id="flashToggle">Toggle Flash</button>
-            <div id="captureMessage" class="mt-3 hidden"></div>
-            <button class="btn btn-primary mt-3" onclick="nextStep(6)">Next</button>
-        </div>
+      <div class="step" id="step6">
+        <h3>Select Account Type</h3>
+        <select id="accountType" class="form-select">
+          <option value="">Choose Account Type...</option>
+          <option value="savings">Savings Account</option>
+          <option value="current">Current Account</option>
+          <option value="business">Business Account</option>
+        </select>
+        <button class="btn btn-primary mt-3" onclick="nextStep(6)">Next</button>
+      </div>
 
-        <div id="step-7" class="step">
-            <h2>Step 7: Choose Account Type</h2>
-            <label for="accountType" class="form-label">Select Type of Account:</label>
-            <select id="accountType" class="form-select" required>
-                <option value="" disabled selected>Select account type</option>
-                <option value="savings">Savings Account</option>
-                <option value="checking">Checking Account</option>
-                <option value="business">Business Account</option>
-            </select>
-            <button class="btn btn-primary mt-3" onclick="nextStep(7)">Next</button>
-        </div>
+      <div class="step" id="step7">
+        <h3>Complete Address and Next of Kin Information</h3>
+        <input type="text" id="address" class="form-control" placeholder="Address">
+        <input type="text" id="nextOfKin" class="form-control mt-3" placeholder="Next of Kin">
+        <button class="btn btn-primary mt-3" onclick="nextStep(7)">Next</button>
+      </div>
 
-        <div id="step-8" class="step">
-            <h2>Step 8: Complete Address and Next of Kin Information</h2>
-            <label for="address" class="form-label">Address:</label>
-            <input type="text" class="form-control" id="address" required>
-            <label for="nextOfKin" class="form-label">Next of Kin:</label>
-            <input type="text" class="form-control" id="nextOfKin" required>
-            <button class="btn btn-primary mt-3" onclick="nextStep(8)">Next</button>
-        </div>
+      <div class="step" id="step8">
+        <h3>Agree to Terms and Conditions</h3>
+        <input type="checkbox" id="termsCheckbox">
+        <label for="termsCheckbox">I agree to the terms and conditions</label>
+        <button class="btn btn-success mt-3" onclick="submitForm()">Submit</button>
+      </div>
 
-        <div id="step-9" class="step">
-            <h2>Step 9: Agree to Terms and Conditions</h2>
-            <input type="checkbox" id="terms" required>
-            <label for="terms">I agree to the terms and conditions</label>
-            <button class="btn btn-primary mt-3" onclick="submitForm()">Submit</button>
-        </div>
-
-        <div id="successMessage" class="hidden text-center mt-4">
-            <h2>Success!</h2>
-            <p>Congratulations! Your information is under review. You will receive a confirmation via message or email about your account number.</p>
-        </div>
+      <div id="successMessage" class="mt-5" style="display:none;">
+        <h3>Congratulations!</h3>
+        <p>Your information is under review. You will receive a confirmation via message or email about your account number.</p>
+      </div>
     </div>
+  </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        let stream;
-        let isFlashOn = false;
-        const video = document.getElementById('video');
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const video = document.getElementById('video');
+    let stream;
 
-        // Camera and flash functionality
-        async function startCamera() {
-            try {
-                stream = await navigator.mediaDevices.getUserMedia({
-                    video: { facingMode: 'environment' } // Use back camera
-                });
-                video.srcObject = stream;
-            } catch (error) {
-                console.error("Error accessing the camera: ", error);
-            }
-        }
-
-        async function toggleFlash(turnOn) {
-            if (!stream) return;
-
-            const track = stream.getVideoTracks()[0];
-            const capabilities = track.getCapabilities();
-
-            if (capabilities.torch) {
-                await track.applyConstraints({
-                    advanced: [{ torch: turnOn }]
-                });
-                isFlashOn = turnOn;
-                document.getElementById('flashToggle').textContent = isFlashOn ? 'Flash Off' : 'Flash On';
-            } else {
-                alert("Flash is not supported on this device.");
-            }
-        }
-
-        document.getElementById('capture').addEventListener('click', async function() {
-            await toggleFlash(true); // Turn on the flash
-            document.getElementById('captureMessage').textContent = "ID captured!";
-            setTimeout(() => {
-                toggleFlash(false); // Turn off flash after 1 second
-            }, 1000);
+    async function startCamera() {
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' }
         });
+        video.srcObject = stream;
+      } catch (error) {
+        console.error("Error accessing the camera: ", error);
+      }
+    }
 
-        function handleAccountMethodChange() {
-            const method = document.getElementById('accountMethod').value;
-            document.getElementById('selfInput').classList.toggle('hidden', method !== 'self');
-            document.getElementById('assistedInput').classList.toggle('hidden', method !== 'assisted');
-        }
+    async function captureID() {
+      alert("ID captured!");  // You can implement the capturing logic here.
+      // Implement any additional processing for the captured ID here.
+    }
 
-        function nextStep(currentStep) {
-            // Hide current step
-            document.getElementById(`step-${currentStep}`).classList.remove('active');
-            // Show next step
-            document.getElementById(`step-${currentStep + 1}`).classList.add('active');
-        }
+    function showAccountFields() {
+      const method = document.getElementById('accountMethod').value;
+      document.getElementById('selfFields').style.display = (method === 'self') ? 'block' : 'none';
+      document.getElementById('rmFields').style.display = (method === 'rm') ? 'block' : 'none';
+    }
 
-        function submitForm() {
-            // Hide all steps and show success message
-            for (let i = 1; i <= 9; i++) {
-                document.getElementById(`step-${i}`).classList.remove('active');
-            }
-            // Show success message
-            document.getElementById('successMessage').classList.remove('hidden');
-        }
+    function showVerificationFields() {
+      const method = document.getElementById('verificationMethod').value;
+      document.getElementById('securityFields').style.display = (method === 'security') ? 'block' : 'none';
+      document.getElementById('biometricFields').style.display = (method === 'biometric') ? 'block' : 'none';
+    }
 
-        // Start the camera when the page loads
-        window.onload = startCamera;
-    </script>
+    function nextStep(currentStep) {
+      const steps = document.querySelectorAll('.step');
+      steps[currentStep - 1].classList.remove('active');
+      if (currentStep === 5) {
+        startCamera();  // Start camera when reaching capture ID step
+      }
+      steps[currentStep].classList.add('active');
+    }
+
+    async function submitForm() {
+      const termsChecked = document.getElementById('termsCheckbox').checked;
+      if (!termsChecked) {
+        alert("You must agree to the terms and conditions.");
+        return;
+      }
+      document.getElementById('formContainer').style.display = 'none';
+      document.getElementById('successMessage').style.display = 'block';
+    }
+
+    // Capture ID button
+    document.getElementById('capture').addEventListener('click', captureID);
+  </script>
 </body>
 </html>
