--- a/camera.html
+++ b/camera.html
@@ -7,6 +7,31 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    body {
+      background-color: #f8f9fa;
+    }
+
+    .header, .footer {
+      background-color: #007bff;
+      color: white;
+      padding: 10px 0;
+    }
+
+    .footer {
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      padding: 20px 0;
+    }
+
+    .container {
+      margin-top: 20px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
+
     .step {
       display: none;
     }
@@ -39,11 +64,19 @@
       width: 100%;
       height: auto;
     }
+
+    .btn-primary, .btn-success {
+      width: 100%;
+    }
   </style>
 </head>
 <body>
-  <div class="container text-center mt-5">
-    <h1>Account Opening Form</h1>
+  <header class="header text-center">
+    <h1>Account Opening Portal</h1>
+  </header>
+
+  <div class="container text-center">
+    <h2>Account Opening Form</h2>
     <div id="formContainer">
       <div class="step active" id="step1">
         <h3>Select Account Opening Method</h3>
@@ -54,13 +87,13 @@
         </select>
         <div id="selfFields" class="mt-3" style="display:none;">
           <label for="phoneSelf">Phone Number:</label>
-          <input type="tel" id="phoneSelf" class="form-control">
+          <input type="tel" id="phoneSelf" class="form-control" placeholder="Enter your phone number">
         </div>
         <div id="rmFields" class="mt-3" style="display:none;">
           <label for="oneTimeCode">Assistance One-Time Code:</label>
-          <input type="text" id="oneTimeCode" class="form-control">
+          <input type="text" id="oneTimeCode" class="form-control" placeholder="Enter one-time code">
           <label for="phoneRM">Phone Number:</label>
-          <input type="tel" id="phoneRM" class="form-control">
+          <input type="tel" id="phoneRM" class="form-control" placeholder="Enter your phone number">
         </div>
         <button class="btn btn-primary mt-3" onclick="nextStep(1)">Next</button>
       </div>
@@ -137,6 +170,10 @@
     </div>
   </div>
 
+  <footer class="footer text-center">
+    <p>&copy; 2024 Account Opening Portal. All rights reserved.</p>
+  </footer>
+
   <!-- Bootstrap JS and dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
@@ -155,8 +192,7 @@
     }
 
     async function captureID() {
-      alert("ID captured!");  // You can implement the capturing logic here.
-      // Implement any additional processing for the captured ID here.
+      alert("ID captured!");  // Implement capturing logic here.
     }
 
     function showAccountFields() {
