--- a/camera.html
+++ b/camera.html
@@ -1,3 +1,131 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ID Scanner</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .camera-container {
+      width: 320px;
+      height: 240px;
+      border: 2px solid #333;
+      margin: 20px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .camera-square {
+      width: 300px;
+      height: 220px;
+      border: 2px dashed #007bff;
+      position: absolute;
+      pointer-events: none;
+    }
+
+    video, img {
+      width: 100%;
+      height: auto;
+    }
+
+    .captured-image {
+      display: none;
+    }
+
+    .photo-captured-message {
+      color: green;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      background-color: #f8f9fa;
+      padding: 10px 0;
+    }
+
+    .step {
+      display: none;
+    }
+
+    .step-active {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">ID Scanner</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Multi-step Form -->
+  <div class="container text-center mt-5">
+    <!-- Step 1: Capture ID -->
+    <div id="step-1" class="step step-active">
+      <h1>ID Scanner</h1>
+      <p>Align the ID within the square and press "Capture" to scan.</p>
+      <div class="camera-container">
+        <video id="video" autoplay playsinline></video>
+        <div class="camera-square"></div>
+        <img id="capturedImage" class="captured-image" alt="Captured ID">
+      </div>
+      <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
+      <button class="btn btn-danger mt-3" id="retake" style="display: none;">Retake</button>
+      <p id="photoCapturedMessage" class="photo-captured-message" style="display: none;">Photo has been captured successfully!</p>
+      <button class="btn btn-success mt-3" id="next-step" style="display: none;">Proceed</button>
+    </div>
+
+    <!-- Step 2: Show Customer Information for Confirmation -->
+<div id="step-2" class="step">
+  <h1>Customer Information</h1>
+  <p>Please confirm the information below:</p>
+  <div class="row justify-content-center">
+    <div class="col-md-4 text-start">
+      <p><strong>Full Name:</strong> John Doe</p>
+      <p><strong>ID Number:</strong> 123456789</p>
+      <p><strong>Date of Birth:</strong> 01/01/1990</p>
+      <p><strong>Address:</strong> 123 Main St, City, Country</p>
+      <!-- Display the captured image here -->
+      <img id="confirmationImage" src="" alt="Captured ID for Confirmation" class="img-fluid mt-3">
+    </div>
+  </div>
+  <button class="btn btn-secondary mt-3" id="back-step">Back</button>
+  <button class="btn btn-success mt-3" id="confirm-submit">Confirm and Submit</button>
+</div>
+
+  <!-- Footer -->
+  <footer class="text-center">
+    <p>&copy; 2024 ID Scanner. All rights reserved.</p>
+  </footer>
+
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   const video = document.getElementById('video');
   const img = document.getElementById('capturedImage');
@@ -88,3 +216,5 @@
   // Start the camera on page load
   startCamera();
 </script>
+</body>
+</html>
